k8s/identity-namespace/identity-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-service-ingress
  namespace: identity
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /identity
        pathType: Prefix
        backend:
          service:
            name: identity-service
            port:
              number: 8080
